k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: instapay-dev
  labels:
    name: instapay-dev
    app: instapay-dev
    environment: dev
