k8s/dev/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
  - port: 5173
    targetPort: 5173
    nodePort: 30517
