k8s/dev/reporting-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reporting-service
  namespace: instapay-dev
spec:
  selector:
    app: reporting-service
  ports:
  - port: 3003
    targetPort: 3003
